fix mobile whitespace problem

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ nav {
 
 
 @media(max-width: 768px) {
-    body {
+    html, body {
         overflow-x: hidden;
     }
 
